// To regenerate api.pb.go run hack/update-generated-pod-resources.sh
syntax = "proto3";

package v1;

//import "github.com/gogo/protobuf/gogoproto/gogo.proto";
//
//option (gogoproto.goproto_stringer_all) = false;
//option (gogoproto.stringer_all) =  true;
//option (gogoproto.goproto_getters_all) = true;
//option (gogoproto.marshaler_all) = true;
//option (gogoproto.sizer_all) = true;
//option (gogoproto.unmarshaler_all) = true;
//option (gogoproto.goproto_unrecognized_all) = false;





// ResourceReservations is a service provided by the kubelet that provides information about the
// current resources reservations on the node
service ResourceReservations {
  rpc UpdateResourceReservations(UpdateResourceReservationsRequest) returns (UpdateResourceReservationsResponse) {}
}

message UpdateResourceReservationsRequest {
  map<string, string> SystemReserved = 1;
  map<string, string> KubeReserved = 2;
}

message UpdateResourceReservationsResponse {}
